[package]
name = "absquic"
version = "0.0.1"
edition = "2021"

[dependencies]
absquic_core = { version = "0.0.1", path = "../absquic_core" }

absquic_quinn = { version = "0.0.1", path = "../absquic_quinn", optional = true }
absquic_quinn_udp = { version = "0.0.1", path = "../absquic_quinn_udp", optional = true }
tokio = { version = "1.17.0", optional = true }

[dev-dependencies]
tokio = { version = "1.17.0", features = [ "full" ] }

[features]
default = []
tokio_runtime = ["absquic_core/tokio_runtime"]
quinn_dev_utils = ["absquic_quinn", "absquic_quinn/dev_utils"]
