[package]
name = "absquic"
version = "0.0.1"
edition = "2021"

[dependencies]
absquic_core = { version = "0.0.1", path = "../absquic_core", default-features = false }
absquic_tokio = { version = "0.0.1", path = "../absquic_tokio", default-features = false, optional = true }
#absquic_quinn = { version = "0.0.1", path = "../absquic_quinn", optional = true }
#absquic_quinn_udp = { version = "0.0.1", path = "../absquic_quinn_udp", optional = true }
#tokio = { version = "1.17.0", optional = true }

[dev-dependencies]
#absquic_core = { version = "0.0.1", path = "../absquic_core", features = [ "tokio_runtime" ] }
#absquic_quinn = { version = "0.0.1", path = "../absquic_quinn", features = [ "dev_utils" ] }
#absquic_quinn_udp = { version = "0.0.1", path = "../absquic_quinn_udp" }
tokio = { version = "1.17.0", features = [ "full" ] }

[package.metadata.docs.rs]
# build docs.rs page with all features enabled so we can see the APIs
all-features = true

[features]
default = []

tokio_runtime = [ "absquic_tokio", "absquic_tokio/tokio_runtime" ]
tokio_udp = [ "absquic_tokio", "absquic_tokio/tokio_udp" ]
