[package]
name = "absquic_core"
version = "0.0.1"
edition = "2021"

[dependencies]
bytes = "1.1.0"
futures-core = { version = "0.3.21", default-features = false }
one_err = "0.0.5"
parking_lot = "0.12.0"
tokio = { version = "1.17.0", default-features = false, optional = true }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.5.4", features = ["futures", "checkpoint"] }

[dev-dependencies]
futures = "0.3.21"
tokio = { version = "1.17.0", features = [ "full" ] }

[package.metadata.docs.rs]
# build docs.rs page with all features enabled so we can see the APIs
all-features = true

[features]
default = []

# oddly enough, we don't need the 'rt' feature : )
tokio_runtime = ["tokio", "tokio/sync", "tokio/time"]
