[package]
name = "absquic_core"
version = "0.0.1"
edition = "2021"

[dependencies]
bytes = { version = "1.1.0", default-features = false }
futures-core = { version = "0.3.21", default-features = false, features = [ "alloc" ] }

[package.metadata.docs.rs]
# build docs.rs page with all features enabled so we can see the APIs
all-features = true

[features]
default = []
