[package]
name = "absquic_quiche"
version = "0.0.1"
edition = "2021"

[dependencies]
boring = "2.0.0"
rcgen = "0.9.2"
#quiche = "0.12.0"
quiche = { git = "https://github.com/cloudflare/quiche.git", rev="ffb945a10b302a304dc15df6a3c04d568f825307", default-features = false, features = [ "boringssl-boring-crate" ] }
tokio = { version = "1.17.0", features = [ "full" ] }

[package.metadata.docs.rs]
# build docs.rs page with all features enabled so we can see the APIs
all-features = true

[features]
default = []
