[package]
name = "absquic_quinn"
version = "0.0.1"
edition = "2021"

[dependencies]
absquic_core = { version = "0.0.1", path = "../absquic_core" }
once_cell = "1.10.0"
quinn-proto = "0.8.1"
rcgen = "0.9.2"
rustls = { version = "0.20.4", features = [ "dangerous_configuration" ] }
tracing = { version = "0.1.32" }

[dev-dependencies]
absquic_quinn_udp = { version = "0.0.1", path = "../absquic_quinn_udp" }
futures = "0.3.21"
tokio = { version = "1.17.0", features = [ "full" ] }
tracing-subscriber = { version = "0.3.9", features = [ "env-filter" ] }
