[package]
name = "absquic_quinn_udp"
version = "0.0.1"
edition = "2021"

[dependencies]
absquic_core = { version = "0.0.1", path = "../absquic_core" }
quinn-proto = { version = "0.8.1", default-features = false }
quinn-udp = { version = "0.1.1", default-features = false }

[dev-dependencies]
futures = "0.3.21"
tokio = { version = "1.17.0", features = [ "full" ] }
