[package]
name = "absquic_quinn_udp"
version = "0.0.1"
edition = "2021"

[dependencies]
absquic_core = { version = "0.0.1", path = "../absquic_core" }
quinn-proto = { version = "0.8.2", default-features = false }
quinn-udp = { version = "0.1.1", default-features = false }
tracing = { version = "0.1.32" }

[dev-dependencies]
absquic_core = { version = "0.0.1", path = "../absquic_core", features = [ "tokio_runtime" ] }
futures = "0.3.21"
tokio = { version = "1.17.0", features = [ "full" ] }
tracing-subscriber = { version = "0.3.9", features = [ "env-filter" ] }
